Full site update with merch, admin edits, HOMOSEXUAL branding

--- a/site_settings.json
+++ b/site_settings.json
@@ -1,1 +1,5 @@
-{"label_name":"HOMOSEXUAL","hero_image":"/static/img/banner.png","favicon":"/static/img/favicon.ico"}
+{
+  "label_name": "HOMOSEXUAL",
+  "favicon": "/static/img/favicon.ico",
+  "banner": "/static/img/banner.png"
+}
